test/corpus/expressions.txt
================
Function call - no arguments
================

f[]

---

(source_file
  (call
    head: (symbol)))

================
Function call - single argument
================

f[x]

---

(source_file
  (call
    head: (symbol)
    argument: (symbol)))

================
Function call - multiple arguments
================

f[x, y]

---

(source_file
  (call
    head: (symbol)
    argument: (symbol)
    argument: (symbol)))

================
Part extraction
================

a[[1]]

---

(source_file
  (part
    head: (symbol)
    argument: (integer)))

================
Part extraction - multiple indices
================

a[[1, 2]]

---

(source_file
  (part
    head: (symbol)
    argument: (integer)
    argument: (integer)))

; ================
; Span - both bounds
; ================
;
; a[[1;;4]]
;
; ---
;
; (source_file
;   (part
;     head: (symbol)
;     arguments: (span
;       (integer)
;       (integer))))
;
; ================
; Span - start only
; ================
;
; a[[1;;]]
;
; ---
;
; (source_file
;   (part
;     head: (symbol)
;     arguments: (span
;       (integer))))
;
; KNOWN ISSUE: implicit_times + GLR causes standalone ;; (high prec) to be
; consumed as implicit_times LHS before binary span can match.

================
Span - end only
================

a[[;;4]]

---

(source_file
  (part
    head: (symbol)
    argument: (span
      (integer))))

================
Span - no bounds
================

a[[;;]]

---

(source_file
  (part
    head: (symbol)
    argument: (span)))

================
Nested function call
================

f[g[x]]

---

(source_file
  (call
    head: (symbol)
    argument: (call
      head: (symbol)
      argument: (symbol))))

================
Addition
================

x + y

---

(source_file
  (infix
    (symbol)
    (symbol)))

================
Assignment - Set
================

x = 5

---

(source_file
  (binary
    (symbol)
    (integer)))

================
Assignment - SetDelayed
================

f[x] := x

---

(source_file
  (binary
    (call
      head: (symbol)
      argument: (symbol))
    (symbol)))

================
Prefix - Not
================

!x

---

(source_file
  (prefix
    (symbol)))

================
Postfix - Function
================

x &

---

(source_file
  (postfix
    (symbol)))

================
Logical And
================

x && y

---

(source_file
  (infix
    (symbol)
    (symbol)))

================
Comparison - Equal
================

x == y

---

(source_file
  (infix
    (symbol)
    (symbol)))

================
Rule operator
================

a -> 1

---

(source_file
  (binary
    (symbol)
    (integer)))

================
Postfix application
================

x // f

---

(source_file
  (binary
    (symbol)
    (symbol)))

================
Apply
================

f @@ {1, 2}

---

(source_file
  (binary
    (symbol)
    (group
      element: (integer)
      element: (integer))))

================
Association
================

<|a -> 1, b -> 2|>

---

(source_file
  (group
    element: (binary
      (symbol)
      (integer))
    element: (binary
      (symbol)
      (integer))))

================
List
================

{1, 2, 3}

---

(source_file
  (group
    element: (integer)
    element: (integer)
    element: (integer)))

================
Parenthesized expression
================

(x + y)

---

(source_file
  (group
    (infix
      (symbol)
      (symbol))))

================
String in function call
================

f["hello"]

---

(source_file
  (call
    head: (symbol)
    argument: (string)))

================
Compound expression
================

x; y

---

(source_file
  (infix
    (symbol)
    (symbol)))

================
Unset
================

x =.

---

(source_file
  (postfix
    (symbol)))

================
TagUnset
================

f /: f[x_] =.

---

(source_file
  (postfix
    (binary
      (symbol)
      (call
        head: (symbol)
        argument: (pattern
          name: (symbol)
          constraint: (blank))))))

================
TagSetDelayed
================

f /: f[x_] := 1

---

(source_file
  (binary
    (binary
      (symbol)
      (call
        head: (symbol)
        argument: (pattern
          name: (symbol)
          constraint: (blank))))
    (integer)))

================
TagSet
================

f /: f[x_] = 1

---

(source_file
  (binary
    (binary
      (symbol)
      (call
        head: (symbol)
        argument: (pattern
          name: (symbol)
          constraint: (blank))))
    (integer)))

================
MessageName - simple
================

f::usage

---

(source_file
  (message_name
    (symbol)
    (message_tag)))

================
MessageName - with language
================

f::usage::English

---

(source_file
  (message_name
    (symbol)
    (message_tag)
    (message_tag)))

================
MessageName - dollar prefix tag
================

f::$Failed

---

(source_file
  (message_name
    (symbol)
    (message_tag)))

================
MessageName - complex LHS
================

f[x]::usage

---

(source_file
  (message_name
    (call
      head: (symbol)
      argument: (symbol))
    (message_tag)))

================
FreeformEvaluate - simple
================

=[hello]

---

(source_file
  (freeform_evaluate
    (freeform_content)))

================
FreeformEvaluate - with spaces
================

=[hello world]

---

(source_file
  (freeform_evaluate
    (freeform_content)))

================
FreeformEvaluate - empty
================

=[]

---

(source_file
  (freeform_evaluate))

================
TypeSpecifier - string shortform
================

"ListVector"::["String"]

---

(source_file
  (type_specifier
    (string)
    argument: (string)))

================
TypeSpecifier - multiple arguments
================

"PackedArray"::["Real64", 1]

---

(source_file
  (type_specifier
    (string)
    argument: (string)
    argument: (integer)))

================
TypeSpecifier - symbol head
================

a::[c, d, =[e]]

---

(source_file
  (type_specifier
    (symbol)
    argument: (symbol)
    argument: (symbol)
    argument: (freeform_evaluate
      (freeform_content))))

================
Implicit times - adjacent symbols
================

x y

---

(source_file
  (implicit_times
    (symbol)
    (symbol)))

================
Implicit times - coefficient
================

2x

---

(source_file
  (implicit_times
    (integer)
    (symbol)))

================
Implicit times - multiline
================

a::[21
123123]

---

(source_file
  (type_specifier
    (symbol)
    argument: (implicit_times
      (integer)
      (integer))))

================
Implicit times - does not capture infix +
================

a + b

---

(source_file
  (infix
    (symbol)
    (symbol)))

================
Implicit times - prefix then implicit times
================

-a b

---

(source_file
  (implicit_times
    (prefix
      (symbol))
    (symbol)))

================
Implicit times - groups
================

(x+1)(y+2)

---

(source_file
  (implicit_times
    (group
      (infix
        (symbol)
        (integer)))
    (group
      (infix
        (symbol)
        (integer)))))

================
Comma - empty middle slot (Null injection)
================

f[a,,b]

---

(source_file
  (call
    head: (symbol)
    argument: (symbol)
    argument: (empty_slot)
    argument: (symbol)))

================
Comma - trailing empty slot
================

f[a,]

---

(source_file
  (call
    head: (symbol)
    argument: (symbol)
    argument: (empty_slot)))

================
Comma - leading empty slot
================

f[,a]

---

(source_file
  (call
    head: (symbol)
    argument: (empty_slot)
    argument: (symbol)))

================
Comma - list with only commas
================

{,}

---

(source_file
  (group
    element: (empty_slot)
    element: (empty_slot)))

================
Comma - multiple consecutive empty slots
================

f[,,a]

---

(source_file
  (call
    head: (symbol)
    argument: (empty_slot)
    argument: (empty_slot)
    argument: (symbol)))

================
Comma - empty middle and trailing
================

f[a,,]

---

(source_file
  (call
    head: (symbol)
    argument: (symbol)
    argument: (empty_slot)
    argument: (empty_slot)))

================
Comma - part with trailing empty slot
================

f[[a,]]

---

(source_file
  (part
    head: (symbol)
    argument: (symbol)
    argument: (empty_slot)))

================
Comma - association with trailing empty slot
================

<|a -> 1,|>

---

(source_file
  (group
    element: (binary
      (symbol)
      (integer))
    element: (empty_slot)))

================
Parenthesized group rejects comma
================

(a, b)

---

(source_file
  (group
    (symbol)
    (ERROR
      (UNEXPECTED 'b'))))
